# multimodal-contrastive-captioning-with-preference-aligned-generation

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  verify_project.sh
configs/: ablation.yaml  default.yaml  test.yaml
scripts/: evaluate.py  predict.py  train.py
src/multimodal_contrastive_captioning_with_preference_aligned_generation/: __init__.py
src/multimodal_contrastive_captioning_with_preference_aligned_generation/data/: __init__.py  loader.py  preprocessing.py
src/multimodal_contrastive_captioning_with_preference_aligned_generation/evaluation/: __init__.py  analysis.py  metrics.py
src/multimodal_contrastive_captioning_with_preference_aligned_generation/training/: trainer.py
src/multimodal_contrastive_captioning_with_preference_aligned_generation/utils/: __init__.py  config.py
test_models/: config.yaml
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
