[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-contrastive-captioning-with-preference-aligned-generation"
version = "0.1.0"
description = "Vision-language model with contrastive learning and preference-aligned caption generation"
authors = [{name = "Alireza Shojaei"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine-learning", "computer-vision", "nlp", "contrastive-learning", "rlhf", "image-captioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "trl>=0.7.0",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "mlflow>=2.9.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "nltk>=3.8.0",
    "pycocotools>=2.0.7",
    "sentencepiece>=0.1.99",
    "sacrebleu>=2.3.0",
    "rouge-score>=0.1.2",
    "evaluate>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
